helloboot-tracing/helloboot-tracing-app/istio/service4-v2.yaml
##################################################################################################
#  Service4 v2.0
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service4-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service4
        version: "2.0"
    spec:
      containers:
      - name: spring-boot
        image: cloud/service4:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
