helloboot-tracing/helloboot-tracing-app/istio/helloboot.yaml
##################################################################################################
#  Service1
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  labels:
    app: service1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: service1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service1
        version: "1.0"
    spec:
      containers:
      - name: spring-boot
        image: cloud/service1:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

##################################################################################################
#  Service2
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  labels:
    app: service2
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: service2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service2
        version: "1.0"
    spec:
      containers:
      - name: spring-boot
        image: cloud/service2:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

##################################################################################################
#  Service3
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service3
  labels:
    app: service3
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: service3
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service3
        version: "1.0"
    spec:
      containers:
      - name: spring-boot
        image: cloud/service3:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

##################################################################################################
#  Service4
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service4
  labels:
    app: service4
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: service4
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service4
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service4
        version: "1.0"
    spec:
      containers:
      - name: spring-boot
        image: cloud/service4:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

###########################################################################
# Ingress resource (helloboot)
##########################################################################

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloboot
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /service1
        backend:
          serviceName: service1
          servicePort: 8080
      - path: /service2
        backend:
          serviceName: service2
          servicePort: 8080
      - path: /service3
        backend:
          serviceName: service3
          servicePort: 8080
      - path: /service4
        backend:
          serviceName: service4
          servicePort: 8080
      - path: /longhello
        backend:
          serviceName: service4
          servicePort: 8080
